--- a/fa2.ipynb
+++ b/fa2.ipynb
@@ -655,7 +655,7 @@
               "      <th>0</th>\n",
               "      <td>0001_01</td>\n",
               "      <td>Europa</td>\n",
-              "      <td>False</td>\n",
+              "      <td>True</td>\n",
               "      <td>B/0/P</td>\n",
               "      <td>TRAPPIST-1e</td>\n",
               "      <td>39.0</td>\n",
